Debut frontend dynamique, besoin rajout de gold/s et diamants/s avec mise en forme

--- a/html/play.html
+++ b/html/play.html
@@ -116,8 +116,8 @@
                     <div class="character-info">
                         <div class="character-name">Personnage 1</div>
                         <div class="character-stats">Niveau: 10</div>
-                        <div class="character-stats">Gold: 100</div>
-                        <div class="character-stats">Diamants: 50</div>
+                        <div class="character-stats">Gold/s: 100</div>
+                        <div class="character-stats">Diamants/s: 50</div>
                     </div>
                 </div>
                 <div class="character">
@@ -125,8 +125,8 @@
                     <div class="character-info">
                         <div class="character-name">Personnage 2</div>
                         <div class="character-stats">Niveau: 15</div>
-                        <div class="character-stats">Gold: 150</div>
-                        <div class="character-stats">Diamants: 75</div>
+                        <div class="character-stats">Gold/s: 150</div>
+                        <div class="character-stats">Diamants/s: 75</div>
                     </div>
                 </div>
                 <div class="character">
@@ -134,8 +134,8 @@
                     <div class="character-info">
                         <div class="character-name">Personnage 3</div>
                         <div class="character-stats">Niveau: 20</div>
-                        <div class="character-stats">Gold: 200</div>
-                        <div class="character-stats">Diamants: 100</div>
+                        <div class="character-stats">Gold/s: 200</div>
+                        <div class="character-stats">Diamants/s: 100</div>
                     </div>
                 </div>
                 <div class="character">
@@ -143,8 +143,8 @@
                     <div class="character-info">
                         <div class="character-name">Personnage 4</div>
                         <div class="character-stats">Niveau: 25</div>
-                        <div class="character-stats">Gold: 250</div>
-                        <div class="character-stats">Diamants: 125</div>
+                        <div class="character-stats">Gold/s: 250</div>
+                        <div class="character-stats">Diamants/s: 125</div>
                     </div>
                 </div>
             </div>
